# sculpt

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SCULPT_Backlog.md  SCULPT_For_Dummies.md  SCULPT_Handbook.md  SCULPT_Namespaces_And_Scopes.md  SCULPT_Professional_Grade_Blueprint.md  SCULPT_Quick_Start.md  SCULPT_Semantics.md  SCULPT_Syntax_Manifest.md  SCULPT_Target_CLI_Reference.md  SCULPT_Target_Model.md  SCULPT_Target_WEB_Reference.md  SCULPT_Targets_Reference.md  SECURITY.md  reconciliation_report.json  sculpt.config.example.json
docs/: README.md  SCULPT_Backlog.md  SCULPT_Baseline_Provider_Plan.md  SCULPT_Convergent_Programming_Concept.md  SCULPT_For_Dummies.md  SCULPT_Handbook.md  SCULPT_Namespaces_And_Scopes.md  SCULPT_Open_Work_Register.md  SCULPT_Professional_Grade_Blueprint.md  SCULPT_Quick_Start.md  SCULPT_Roadmap.md  SCULPT_Semantics.md  SCULPT_Syntax_Manifest.md  SCULPT_Target_CLI_Reference.md  SCULPT_Target_GUI_Reference.md  SCULPT_Target_Model.md  SCULPT_Target_WEB_Reference.md  SCULPT_Targets_Reference.md  SCULPT_Versioning.md  SCULPT_Web_Stack_Model.md
examples/: README.md  invoice_review.sculpt  native_window.sculpt  practical_gui_service_desk.sculpt  snake_high_nd.sculpt
ir-schemas/: cli-ir.json  gui-ir.json  web-app-ir.json  web-ir.json
poc/: POC_Incident_Triage_Report.md  README.md  SCULPT_Case_Studies_Overview.md  SCULPT_Evidence_Status.md  SCULPT_vs_Vibe_Case_Study_Template.md  SCULPT_vs_Vibe_Data_Heavy_Dataset_Spec.md  SCULPT_vs_Vibe_Data_Heavy_Execution_Checklist.md  vibe_incident_triage.ts  (+20 more)
(+158 files in other folders)
