[package]
name = "sculpt"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ratatui = "0.26"
crossterm = "0.27"
unicode-width = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"
